# minutes-to-proposal

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.claude/skills/minutes-to-proposal/: SKILL.md
app/: main.py
demo_inputs/: meeting_note_faq_hr_helpdesk.md  meeting_note_form_screening.md  meeting_note_rag_sales_knowledge.md  meeting_note_sales_voicebot.md  sample.json
docs/: agent_design_flow.md  demo_slides.html
knowledge/: past_cases.json  rate_card.json  risk_catalog.json
scripts/: run.py
src/: config.py
src/agent/: __init__.py  loop.py  planner.py
src/schemas/: __init__.py  presales.py  trace.py
src/services/: __init__.py  agent_snapshot.py  openai_client.py  presales.py  run_context.py
src/tools/: __init__.py  base.py  echo.py  presales.py
templates/: proposal_template.html  standard_wbs.json
tests/: test_agent.py
