[tool.poetry]
name = "minutes-to-proposal"
version = "0.1.0"
description = "議事録 / RFP から提案一式を生成するプリセールスエージェント（Streamlit）"
authors = ["TODO: team <todo@example.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
streamlit = "^1.37.0"
pydantic = "^2.8.0"

# TODO: theme-dependent deps
# TODO: http client / vector db / parsing libs etc.

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.9"
pytest = "^8.3.2"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"